# all_pairs_timings

./: CMakeLists.txt  README.md  plot.py  setenv.sh
src/: all_pairs.cpp  all_pairs.hpp  kernel_timing.cpp  kernels.cu  kernels.h  kernels.hpp  main.cpp  tc.cu  timer.hpp
